--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/macros-form.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/shared/macros-form.vm
@@ -1,5 +1,5 @@
-#macro(formFieldLabel $required $label)
-<label>
+#macro(formFieldLabel $required $label $attributes)
+<label $attributes>
     #springMessage($label)
     #if($required)<span class="required">∗</span>#end
 </label>
