--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-new-world.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-new-world.vm
@@ -16,25 +16,25 @@
         <div class="section content">
             <form id="form" action="$cp/my/new/world" method="post">
                 <div class="form-field">
-                    #formFieldLabel(true, 'CreateNewWorld.form.title')
+                    #formFieldLabel(true, 'CreateNewWorld.form.title', '')
                     <div class="full-width-input">
                         #springFormInput('form.title', 'class="validate-good"')
                     </div>
                 </div>
                 <div class="form-field">
-                    #formFieldLabel(false, 'CreateNewWorld.form.memo')
+                    #formFieldLabel(false, 'CreateNewWorld.form.memo', '')
                     <div class="full-width-input">
                         #springFormTextarea('form.memo', 'class="validate-good"')
                     </div>
                 </div>
                 <div class="form-field">
-                    #formFieldLabel(false, 'CreateNewWorld.form.publisherTitle')
+                    #formFieldLabel(false, 'CreateNewWorld.form.publisherTitle', '')
                     <div class="full-width-input">
                         #springFormInput('form.publisherTitle', 'class="validate-good"')
                     </div>
                 </div>
                 <div class="form-field">
-                    #formFieldLabel(false, 'CreateNewWorld.form.publisherUrl')
+                    #formFieldLabel(false, 'CreateNewWorld.form.publisherUrl', '')
                     <div class="full-width-input">
                         #springFormInput('form.publisherUrl', 'class="validate-good"')
                     </div>
