--- a/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layout.less
@@ -107,6 +107,10 @@ body#bodyColumns {
     #bodyMenu {
         text-align: center;
 
+        form {
+            text-align: left;
+        }
+
         .section {
             > .section-head {
                 border-top: 1px solid #EEEFFC;
