--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-new-world.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/user/my-new-world.vm
@@ -5,12 +5,12 @@
     #parse('shared/html-head.vm')
     <title>#springMessage('MyWorldsPage.title')</title>
 </head>
-    #parse('_index-macros.vm')
 #* @vtlvariable name="worldList" type="java.util.List<waypalm.domain.entity.World>" *#
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
-        #landingSidebar('landingSidebarAccount')
+        #set($landingSidebarActiveTab='landingSidebarAccount')
+        #parse('_landingSidebar.vm')
     </div>
     <div class="center">
         <div class="section content">
