--- a/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/typography.less
@@ -48,3 +48,17 @@ ul {
 .small-text {
     font-size: 75%;
 }
+
+.float-list {
+    .clearfix();
+    list-style: none;
+    padding: 0;
+    margin: 0;
+
+    > .float-list-item {
+        list-style: none;
+        float: left;
+        padding: 0;
+        margin: 0 1em 1em 0;
+    }
+}
