--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/avatars.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/avatars.vm
@@ -5,11 +5,11 @@
     #parse('shared/html-head.vm')
     <title>#springMessage('LandingPage.title')</title>
 </head>
-    #parse('_index-macros.vm')
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
-            #landingSidebar('landingSidebarCommon')
+        #set($landingSidebarActiveTab='landingSidebarCommon')
+        #parse('_landingSidebar.vm')
     </div>
     <div class="center">
     </div>
