--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/manage-world-surfaces.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/world/manage-world-surfaces.vm
@@ -7,12 +7,11 @@
 #* @vtlvariable name="surfaceList" type="java.util.List<waypalm.domain.entity.Surface>" *#
     <title>#springMessage1('ManageWorldSurfaces.title', $escTool.html($world.title))</title>
 </head>
-    #parse('_index-macros.vm')
-    #parse('world/_world-macros.vm')
 <body id="bodyColumns" class="layout-1-4">
 <div class="content">
     <div class="left">
-        #worldPageSidebar('landingSidebarWorld')
+        #set($worldPageSidebarActiveTab='landingSidebarWorld')
+        #parse('world/_worldPageSidebar.vm')
     </div>
     <div class="center">
         <div class="content">
