--- a/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
@@ -1,3 +1,10 @@
 body {
     padding-top: @navbarHeight + 20px;
 }
+
+body.login-page {
+    .auth-column {
+        width: 300px;
+        margin: 0 auto;
+    }
+}
