--- a/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
@@ -8,6 +8,8 @@
 @import "../less-bootstrap/sprites.less";
 @import "../less-bootstrap/utilities.less";
 @import "../less-bootstrap/forms.less";
+@import "../less-bootstrap/buttons.less";
+@import "../less-bootstrap/button-groups.less";
 @import "variables.less";
 @import "layouts.less";
 @import "../less-bootstrap/responsive.less";
