--- a/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
@@ -5,6 +5,7 @@
 @import "../less-bootstrap/scaffolding.less";
 @import "../less-bootstrap/navs.less";
 @import "../less-bootstrap/navbar.less";
+@import "../less-bootstrap/dropdowns.less";
 @import "../less-bootstrap/sprites.less";
 @import "../less-bootstrap/utilities.less";
 @import "../less-bootstrap/forms.less";
