--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/access/login.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/access/login.vm
@@ -5,22 +5,44 @@
     #parse('_html-head.vm')
     <title>#springMessage('layout.title.landingPage')</title>
 </head>
+#* @vtlvariable name="authError" type="org.springframework.security.core.AuthenticationException" *#
+#* @vtlvariable name="authErrorBadCredentials" type="java.lang.Boolean" *#
+#* @vtlvariable name="authErrorUsernameNotFound" type="java.lang.Boolean" *#
+    #set($totalRecallLink="$cp/auth/recall")
 <body class="login-page">
     #parse('_layout-basic-header.vm')
 <div class="container">
     <div class="auth-column">
-        <h2 class="form-signin-heading">#springMessage('page.Login.widget.form')</h2>
+        #if($authError)
+            <div class="alert alert-block">
+                #if($authErrorBadCredentials)
+                    <h4>#springMessage('page.Login.faultBadCredentials.header')</h4>
+                    #springMessage1('page.Login.faultBadCredentials.suggestion', $totalRecallLink)
+                #elseif($authErrorUsernameNotFound)
+                    <h4>#springMessage('page.Login.faultUsernameNotFound.header')</h4>
+                    #springMessage1('page.Login.faultUsernameNotFound.suggestion', $totalRecallLink)
+                #else
+                    <h4>#springMessage('page.Login.fault.header')</h4>
+                    #springMessage1('page.Login.fault.suggestion', $authError.localizedMessage)
+                #end
+            </div>
+        #else
+            <h2 class="form-signin-heading">#springMessage('page.Login.widget.form')</h2>
+        #end
 
         <form method="post">
             <input class="input-block-level" type="email" name="username" placeholder="#springMessage('page.Login.form.email.placeholder')">
             <input class="input-block-level" type="password" name="password" placeholder="#springMessage('page.Login.form.password.placeholder')">
-            <button class="btn btn-primary" type="submit">#springMessage('page.Login.form.submit')</button>
-        </form>
-    </div>
-    <div class="auth-column" style="padding-top: 1em;">
-        <h3 class="form-signin-heading">#springMessage('page.Login.widget.register')</h3>
 
-        <div>
+            <div>
+                <button class="btn btn-primary" type="submit">#springMessage('page.Login.form.submit')</button>
+                <span style="padding-left: 1em;font-size: 90%;">
+                    #springMessage1('page.Login.form.remember', $totalRecallLink)
+                </span>
+            </div>
+        </form>
+        <div style="text-align: center;">
+            <strong>#springMessage('page.Login.widget.register')</strong>
             #springMessage1('page.Login.widget.register.text', "$cp/auth/register")
         </div>
     </div>
