--- a/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
@@ -4,7 +4,16 @@ body {
 
 body.login-page {
     .auth-column {
-        width: 300px;
+        width: 400px;
         margin: 0 auto;
+
+        > form {
+            margin-left: 50px;
+            margin-right: 50px;
+        }
     }
+}
+
+.controls.inline-at-right {
+    text-align: right;
 }
