--- a/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/theme.less
@@ -7,6 +7,7 @@
 @import "../less-bootstrap/navbar.less";
 @import "../less-bootstrap/dropdowns.less";
 @import "../less-bootstrap/sprites.less";
+@import "../less-bootstrap/alerts.less";
 @import "../less-bootstrap/utilities.less";
 @import "../less-bootstrap/forms.less";
 @import "../less-bootstrap/buttons.less";
