--- a/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
@@ -17,3 +17,11 @@ body.login-page {
 .controls.inline-at-right {
     text-align: right;
 }
+
+.navbar .dropdown-toggle img.gravatar.s24 {
+    width: 24px;
+    height: 24px;
+    margin-right: 6px;
+    margin-top: -3px;
+    margin-bottom: -3px;
+}
