--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/_layout-basic-header.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/_layout-basic-header.vm
@@ -10,9 +10,9 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li>
+                    <!--li>
                         <a href="$cp/mission">#springMessage('layout.navbar.mission.label')</a>
-                    </li>
+                    </li-->
                     <li>
                         <a href="$cp/browse">#springMessage('layout.navbar.browse.label')</a>
                     </li>
@@ -21,7 +21,8 @@
                     #if($eVisitor.logged)
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Account
+                                <img class="gravatar s24" src="//gravatar.com/avatar/$eVisitor.user.gravatar?s=24"/>
+                                $!escTool.html($eVisitor.user.name)
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
