create surface - geoid

--- a/src/waypalm-site/src/main/webapp/WEB-INF/velocity/constructor/surface.vm
+++ b/src/waypalm-site/src/main/webapp/WEB-INF/velocity/constructor/surface.vm
@@ -8,7 +8,17 @@
 <body>
     #parse('_layout-basic-header.vm')
 <div class="container">
+    <h2>Select surface type and fill details below</h2>
+
     <form method="post" action="$cp/constructor/surface">
+        <label>
+            <input type="radio" name="type" value="PLANE">
+            <img src="$themeRoot/img/thumbs/createSurface.plane.png"/>
+        </label>
+        <label>
+            <input type="radio" name="type" value="GEOID">
+            <img src="$themeRoot/img/thumbs/createSurface.geoid.png"/>
+        </label>
     </form>
     <script type="text/javascript">
     </script>
