--- a/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
+++ b/src/waypalm-site/src/main/webapp/static/theme/less/layouts.less
@@ -19,10 +19,18 @@ body.login-page {
     text-align: right;
 }
 
-.navbar .dropdown-toggle img.gravatar.s24 {
-    width: 24px;
-    height: 24px;
-    margin-right: 6px;
-    margin-top: -3px;
-    margin-bottom: -3px;
+.navbar {
+    .dropdown-toggle img.gravatar.s24 {
+        width: 24px;
+        height: 24px;
+        margin-right: 6px;
+        margin-top: -3px;
+        margin-bottom: -3px;
+    }
+
+    .nav {
+        a.switch-navbar-mode {
+            color: #699aab;
+        }
+    }
 }
